# vehicle-diagnostics-simulator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CANBus.h  CANDecoder.h  CANDecoderHelperFunctions.h  CANFrame.h  CANTrafficAnalyzer.h  CANTrafficReport.h  ConsoleInput.h  DTC.h  DecodedCANFrame.h  DiagnosticLog.h  DiagnosticResponseBuilder.h  ECU.h  ECUStatus.h  MenuActions.h  Severity.h  Vehicle.h  VehicleResults.h  VehicleSession.h
include/diagnostics/: DiagnosticDataStore.h  DiagnosticMessageProcessor.h  DiagnosticRequest.h  DiagnosticRequestParser.h  DiagnosticResponse.h  DiagnosticResponseBuilder.h
include/transport/: IsoTpSegmenter.h
notes/: project-scope.md  v0.2-plan.md  v0.4-plan.md
src/: CANBus.cpp  CANDecoder.cpp  CANDecoderHelperFunctions.cpp  CANFrame.cpp  CANTrafficAnalyzer.cpp  CANTrafficReport.cpp  ConsoleInput.cpp  DTC.cpp  DecodedCANFrame.cpp  DiagnosticLog.cpp  DiagnosticRequestParser.cpp  DiagnosticResponseBuilder.cpp  ECU.cpp  MenuActions.cpp  Vehicle.cpp  main.cpp
src/diagnostics/: DiagnosticDataStore.cpp  DiagnosticMessageProcessor.cpp  DiagnosticRequestParser.cpp  DiagnosticResponseBuilder.cpp
src/transport/: IsoTpSegmenter.cpp
tests/: test_vehicle.cpp
